SDFProvider:modify test cases to support JDK17